--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,1 @@
-megaIPTVUrl=http://megaiptv.dynu.com:2020/get.php?username={username}&password={password}&type=m3u&output=ts
+megaIPTVUrl=http://portugal-hd-digital.com:8000/get.php?username={username}&password={password}&type=m3u_plus&output=ts
